# itmo-python-homework

./: pyproject.toml
homework_1/: cli.py  compare.py  nl.py  tail.py  wc.py
hw1/: README.md
hw1/homework_1/: nl.py  wc.py
hw1/tests/: test_tail.py  utils.py
hw1/tests/data/: a.txt  b.txt
hw2/: README.md  pyproject.toml
hw2/homework_2/: Dockerfile  generate_pdf.py
hw2/homework_2/artifacts/2.1/: document.tex
hw2/homework_2/artifacts/2.2/: url.txt
hw2/homework_2/artifacts/2.3/: run.txt  run_app.sh
hw2/homework_2/my_latex_lib/: README.md  setup.py
hw2/homework_2/my_latex_lib/latex_generator/: __init__.py  latex_generator.py
hw3/: pyproject.toml
hw3/homework_3/: matrix.py
hw3/homework_3/artifacts/3.3/: A.txt  AB.txt  B.txt  C.txt  CD.txt  hash.txt
hw4/: README.md  pyproject.toml
hw4/homework_4/: app.py  fib.py  integrate.py
hw4/homework_4/artifacts/4.1/: results.txt
hw4/homework_4/artifacts/4.2/: results.txt
hw4/homework_4/artifacts/4.3/: interaction_log.txt
tests/: test_nl.py  test_tail.py  test_wc.py  utils.py
tests/data/: c.txt
