[tool.poetry]
name = "homework-1"
version = "0.1.0"
description = "CLI utils like: nb, wc and tail"
authors = ["Maxim Sinelnikov <sinelnikov-web@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
click = "^8.1.7"

[tool.poetry.group.test.dependencies]
pytest = "^8.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
