[tool.poetry]
name = "homework-3"
version = "0.1.0"
description = "matrix utils"
authors = ["Maxim Sinelnikov <sinelnikov-web@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.1.3"

[tool.poetry.group.test.dependencies]
pytest = "^8.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
